k8s/03-workshop-products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-app
  namespace: workshop-k8s
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products-app
  template:
    metadata:
      labels:
        app: products-app
    spec:
      containers:
        - name: products-container
          image: workshop/products-service:latest
          imagePullPolicy: IfNotPresent # 🐳 Si ya la compilaste en el nodo, la usa de inmediato
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m" # Capado para que reaccione rápido al estrés
            limits:
              memory: "256Mi"
              cpu: "150m"
