k8s/06-workshop-users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-app
  namespace: workshop-k8s
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users-app
  template:
    metadata:
      labels:
        app: users-app
    spec:
      containers:
        - name: users-container
          image: workshop/users-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "150Mi"
              cpu: "100m" # 🚨 10% de un núcleo: El blanco perfecto para ahogar en vivo
            limits:
              memory: "256Mi"
              cpu: "250m"
