k8s/05-workshop-products-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-srv # 📡 DNS Interno: http://products-srv:8080
  namespace: workshop-k8s
spec:
  type: ClusterIP # 🔒 Oculto del mundo exterior, solo accesible internamente
  selector:
    app: products-app
  ports:
    - port: 8080
      targetPort: 8080
