k8s/08-workshop-users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-public-srv
  namespace: workshop-k8s
spec:
  type: ClusterIP # 🔒 Limpio, seguro y protegido por el Ingress
  selector:
    app: users-app
  ports:
    - port: 8081
      targetPort: 8081
