k8s/09-workshop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workshop-gateway-ingress
  namespace: workshop-k8s
  annotations:
    # 👑 Vincula formalmente este mapa con el controlador que acabas de instalar
    kubernetes.io/ingress.class: "nginx"
    # 🚀 REESCRITO DINÁMICO: Remueve el prefijo perimetral antes de enviar los bytes a Tomcat
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: workshop.local
      http:
        paths:
          # 👥 RUTA 1: Captura todo lo que empiece con /api/users
          - path: /api/users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: users-public-srv # Apunta al ClusterIP del paso 06
                port:
                  number: 8081
          
          # 📦 RUTA 2: Captura todo lo que empiece con /api/products
          - path: /api/products(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: products-srv # Apunta al ClusterIP del paso 04
                port:
                  number: 8080
